2010-06-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.0.

2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-06-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Updating to version currently used in dlvhex trunk.

	* configure.ac (AC_PREREQ): Require autoconf >= 2.61.
	(AC_INIT): Bump version to 1.7.0.

2010-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Fix content.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* src/Makefile.am: Likewise.
	* include/Makefile.am: Likewise.

	* Makefile.am (AUTOMAKE_OPTIONS): Use gnu instead of foreign.

2009-09-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Fix for autoconf 2.64 (see also
	http://lists.gnu.org/archive/html/bug-autoconf/2009-08/msg00054.html).

2009-08-24  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Updating to version currently used in dlvhex trunk.

2008-02-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* doxygen.cfg: Update doxygen configuration via doxygen -u.
	Extract static and private members.

	* configure.ac: Integrate new boost searching macros.
	Create doxygen documentation in the doc directory.
	* src/Makefile.am: Likewise.

	* m4/boost.m4: Use boost.m4 from http://repo.or.cz/w/boost.m4.git.

2008-01-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/AggPluginInterface.cpp: Set plugin name.

2008-01-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/AggPluginInterface.cpp: Adapt to new dlvhex plugin API.
	* include/AggPluginInterface.h: Likewise.

	* m4/boost.m4: New file.

	* configure.ac: Bump version to 0.2.0.
	Fix boost searching.

	* bootstrap.sh: Use autoreconf.

2007-07-19  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* bootstrap.sh: Fixed inclusion of m4 folder.
	* include/AggPluginInterface.h: Removed hardcoded "mask" id.